cloudformation/week2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Demo week2

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
  DBUsername:
    Type: String
    Description: 'Username for RDS Database'
    Default: postgres
  DBPassword:
    Type: String
    Description: 'Password for RDS Database'
    NoEcho: true
    MinLength: 8
  DBName:
    Type: String
    Description: 'Custom DB name'

Resources:

# =================================================
# VPC
# =================================================
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

# =================================================
# SUBNETS (2 AZ)
# =================================================
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-southeast-3a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-southeast-3a
      CidrBlock: 10.0.3.0/24

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-southeast-3b
      CidrBlock: 10.0.4.0/24

# =================================================
# ROUTING
# =================================================
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetAAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

# NAT
  EIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachIGW
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnetA

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnetAAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable

# S3 VPC Endpoint (Gateway)
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
      VpcId: !Ref VPC
      RouteTableIds:
        - !Ref PublicRouteTable
        - !Ref PrivateRouteTable
      VpcEndpointType: Gateway

# =================================================
# SECURITY GROUPS
# =================================================
  NginxSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  AppSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow only from Nginx
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref NginxSG
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref NginxSG
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Postgres from App
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref AppSG
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

# =================================================
# S3 + IAM
# =================================================
# =================================================
# S3 BUCKET: Tempat Menyimpan Gambar Cover Buku
# =================================================
  AppBucket:
    Type: AWS::S3::Bucket
    Properties:
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        IgnorePublicAcls: true
        BlockPublicPolicy: false
        RestrictPublicBuckets: false

  AppBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref AppBucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: "*"
            Action: "s3:GetObject" # Memberikan akses publik agar gambar bisa dilihat di browser
            Resource: !Join ["", ["arn:aws:s3:::", !Ref AppBucket, "/*"]]

# =================================================
# IAM ROLE: Autorisasi EC2 agar bisa akses S3 & RDS
# =================================================
  AppRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com # Role ini digunakan oleh server EC2
            Action: sts:AssumeRole
      Policies:
        - PolicyName: S3AccessPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetObject
                  - s3:PutObject # Izin untuk upload gambar
                  - s3:DeleteObject # Izin untuk hapus gambar
                Resource: !Sub "${AppBucket.Arn}/*"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  AppInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref AppRole

# =================================================
# RDS: Database PostgreSQL Terpusat (Bukan di Local)
# =================================================
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Multi AZ subnet
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB

  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: postgres
      DBInstanceClass: db.t3.micro
      AllocatedStorage: 20
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      DBName: !Ref DBName
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref DBSubnetGroup
      MultiAZ: true # kalau mau true untuk HA
      VPCSecurityGroups:
        - !Ref RDSSG

# =================================================
# EC2 PRIVATE APP
# =================================================
  AppServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0d5f3e23c61fbb3e8
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref AppInstanceProfile
      SubnetId: !Ref PrivateSubnetA
      SecurityGroupIds:
        - !Ref AppSG
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # --- Script Instalasi Otomatis Saat EC2 Menyala ---
          
          dnf update -y
          dnf install -y nodejs git # Install Node.js dan Git
          npm install -g pm2 # Install PM2 untuk menjalankan aplikasi di Background
          
          cd /home/ec2-user
          # Mengambil kode terbaru dari GitHub kamu
          git clone https://github.com/Nizarrafi/book-catalog.git app
          cd app
          npm install # Install semua library (Express, pg, aws-sdk, dll)
          
          # Membuat file .env secara otomatis
          cat <<EOF > .env
          DB_HOST=${DBInstance.Endpoint.Address}
          DB_USER=${DBUsername}
          DB_PASS=${DBPassword}
          DB_NAME=${DBName}
          AWS_BUCKET_NAME=${AppBucket}
          AWS_REGION=${AWS::Region}
          EOF
          
          # Berikan izin akses folder ke user ec2-user
          chown -R ec2-user:ec2-user /home/ec2-user/app
          # Jalankan aplikasi menggunakan PM2 (agar tetap hidup meski terminal ditutup)
          sudo -u ec2-user pm2 start server.js --name app
          sudo -u ec2-user pm2 save

# =================================================
# EC2 PUBLIC NGINX
# =================================================
  NginxServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0d5f3e23c61fbb3e8
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnetA
      SecurityGroupIds:
        - !Ref NginxSG
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          dnf update -y
          dnf install -y nginx

          cat <<EOF > /etc/nginx/conf.d/app.conf
          server {
              listen 80;
              location / {
                  proxy_pass http://${AppServer.PrivateIp}:3000;
                  proxy_set_header Host \$host;
                  proxy_set_header X-Real-IP \$remote_addr;
                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
              }
          }
          EOF

          systemctl enable nginx
          systemctl restart nginx

Outputs:
  PublicURL:
    Value: !Sub "http://${NginxServer.PublicIp}"
